# Judge-Evaluation

./: .gitignore  CMakeLists.txt  README.md  json.txt  main.cpp
src/: config.h
src/compile/header/: compile.h
src/compile/source/: compile.cpp
src/database/header/: connect.h  rabbitmq.h
src/database/source/: connect.cpp
src/header/: compile.h  domain.h  judgecore.h  manager.h  rabbitmq.h  utils.h
src/judge/header/: judgecore.h
src/judge/source/: judgecore.cpp
src/manager/header/: manager.h
src/manager/source/: manager.cpp
src/source/: compile.cpp  judgecore.cpp  manager.cpp  rabbitmq.cpp  utils.cpp
src/utils/header/: utils.h
src/utils/source/: utils.cpp
